# communication_map

./: .gitignore  README.md  amvera.yml  manage.py  pyproject.toml
communications_map/: asgi.py  settings.py  urls.py  wsgi.py
maps/: urls.py
maps/static/data/rgp/: gaz.kml  outline.kml  var3.kml  var4.kml  var5.kml
maps/static/data/rzd/: kadastr.kml  out1.kml  out2.kml  out4.kml  rzd1.kml  rzd3__.kml  rzd4.kml  rzd5.kml  sewerage.kml  test_picture.kml
maps/static/map/: geoxml_display.js
maps/static/map/css/: bs-variables.css
static/data/rgp/: etap1.kml  sewerage.kml  var1.kml  var2.kml  warm.kml  water.kml
static/data/rzd/: board.kml  connection.kml  piketag.kml  rzd6.kml  water.kml  water_old.kml
templates/maps/: base.html  rgp.html  rzd.html
