[tool.poetry]
name = "communications-map"
version = "0.1.0"
description = ""
authors = ["vvsch <vvschrus@gmail.com>"]
readme = "README.md"
packages = [{include = "communications_map"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
